{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 740,
  "lineage": "82c116d8-aa23-2648-547c-389fb58b59f1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "codebuild_eks_sg_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Codebuild to EKS",
            "from_port": 0,
            "id": "sgrule-544362812",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0842b7b7b263777b1",
            "security_group_rule_id": "sgr-0c0af07e24c055e66",
            "self": false,
            "source_security_group_id": "sg-082cc0efcee8ad457",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.eks_cluster"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:371198079589:security-group/sg-0842b7b7b263777b1",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-069325cdf5277d439"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0842b7b7b263777b1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods running on workers to send communication to cluster primary security group.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-069325cdf5277d439"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-069325cdf5277d439"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Codebuild to EKS",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-082cc0efcee8ad457"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "vtbxmck-bootcamp-eks-cluster-sg20231003141249003300000001",
            "name_prefix": "vtbxmck-bootcamp-eks-cluster-sg",
            "owner_id": "371198079589",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vtbxmck-bootcamp-eks-cluster-sg"
            },
            "tags_all": {
              "Name": "vtbxmck-bootcamp-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0142ed266c5de6da2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:371198079589:security-group/sg-069325cdf5277d439",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow nodes all egress to the self.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-069325cdf5277d439",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0842b7b7b263777b1"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running on workers to receive communication from cluster primary security group.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0842b7b7b263777b1"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0842b7b7b263777b1"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "vtbxmck-bootcamp-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "371198079589",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vtbxmck-bootcamp-eks-nodes-sg",
              "kubernetes.io/cluster/vtbxmck-bootcamp": "owned"
            },
            "tags_all": {
              "Name": "vtbxmck-bootcamp-eks-nodes-sg",
              "kubernetes.io/cluster/vtbxmck-bootcamp": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0142ed266c5de6da2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-1176211129",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0842b7b7b263777b1",
            "security_group_rule_id": "sgr-0e2a3f0dd2bad13fb",
            "self": false,
            "source_security_group_id": "sg-069325cdf5277d439",
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.eks_cluster",
            "module.eks_cluster.aws_security_group.eks_nodes"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-4269947009",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0842b7b7b263777b1",
            "security_group_rule_id": "sgr-0a5f69894e0fce1b6",
            "self": false,
            "source_security_group_id": "sg-069325cdf5277d439",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.eks_cluster",
            "module.eks_cluster.aws_security_group.eks_nodes"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_primary_ingress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running on workers to send communication to cluster primary security group.",
            "from_port": 0,
            "id": "sgrule-3543348604",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0842b7b7b263777b1",
            "security_group_rule_id": "sgr-0e2a3f0dd2bad13fb",
            "self": false,
            "source_security_group_id": "sg-069325cdf5277d439",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_cloudwatch_log_group.eks_cluster",
            "module.eks_cluster.aws_eks_cluster.main",
            "module.eks_cluster.aws_iam_role.eks_cluster_role",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster-policy",
            "module.eks_cluster.aws_iam_role_policy_attachment.service_policy",
            "module.eks_cluster.aws_iam_role_policy_attachment.vpc_resource_controller",
            "module.eks_cluster.aws_security_group.eks_cluster",
            "module.eks_cluster.aws_security_group.eks_nodes",
            "module.eks_cluster.data.aws_iam_policy_document.eks_cluster_role_assume",
            "module.eks_cluster.data.aws_partition.spoke",
            "module.eks_cluster.data.aws_region.spoke",
            "module.eks_cluster.module.cloudwatch_log_group_kms_key.aws_kms_key.direct_key",
            "module.eks_cluster.module.cloudwatch_log_group_kms_key.aws_kms_key.service_key",
            "module.eks_cluster.module.cloudwatch_log_group_kms_key.data.aws_caller_identity.current",
            "module.eks_cluster.module.cloudwatch_log_group_kms_key.data.aws_iam_policy_document.kms_key_policy_direct",
            "module.eks_cluster.module.cloudwatch_log_group_kms_key.data.aws_iam_policy_document.kms_key_policy_via_service",
            "module.eks_cluster.module.envelope_encryption_kms_key.aws_kms_key.direct_key",
            "module.eks_cluster.module.envelope_encryption_kms_key.aws_kms_key.service_key",
            "module.eks_cluster.module.envelope_encryption_kms_key.data.aws_caller_identity.current",
            "module.eks_cluster.module.envelope_encryption_kms_key.data.aws_iam_policy_document.kms_key_policy_direct",
            "module.eks_cluster.module.envelope_encryption_kms_key.data.aws_iam_policy_document.kms_key_policy_via_service",
            "module.eks_cluster.random_string.postfix"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1122475447",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-069325cdf5277d439",
            "security_group_rule_id": "sgr-0d1b8c9e0006010c5",
            "self": false,
            "source_security_group_id": "sg-069325cdf5277d439",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.eks_nodes"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-2934476742",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-069325cdf5277d439",
            "security_group_rule_id": "sgr-0b92525f5109641b2",
            "self": false,
            "source_security_group_id": "sg-0842b7b7b263777b1",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.eks_cluster",
            "module.eks_cluster.aws_security_group.eks_nodes"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 443,
            "id": "sgrule-1787164664",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-069325cdf5277d439",
            "security_group_rule_id": "sgr-0c11a2a5f3b88d560",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.eks_nodes"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes all egress to the self.",
            "from_port": 0,
            "id": "sgrule-4141863671",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-069325cdf5277d439",
            "security_group_rule_id": "sgr-0cccf8c322331dcb6",
            "self": false,
            "source_security_group_id": "sg-069325cdf5277d439",
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.eks_nodes"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-1405805706",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-069325cdf5277d439",
            "security_group_rule_id": "sgr-056fd1302609440b0",
            "self": false,
            "source_security_group_id": "sg-0842b7b7b263777b1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.eks_cluster",
            "module.eks_cluster.aws_security_group.eks_nodes"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running on workers to receive communication from cluster primary security group.",
            "from_port": 0,
            "id": "sgrule-623100576",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-069325cdf5277d439",
            "security_group_rule_id": "sgr-0fd538e57ce97b502",
            "self": false,
            "source_security_group_id": "sg-0842b7b7b263777b1",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_cloudwatch_log_group.eks_cluster",
            "module.eks_cluster.aws_eks_cluster.main",
            "module.eks_cluster.aws_iam_role.eks_cluster_role",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster-policy",
            "module.eks_cluster.aws_iam_role_policy_attachment.service_policy",
            "module.eks_cluster.aws_iam_role_policy_attachment.vpc_resource_controller",
            "module.eks_cluster.aws_security_group.eks_cluster",
            "module.eks_cluster.aws_security_group.eks_nodes",
            "module.eks_cluster.data.aws_iam_policy_document.eks_cluster_role_assume",
            "module.eks_cluster.data.aws_partition.spoke",
            "module.eks_cluster.data.aws_region.spoke",
            "module.eks_cluster.module.cloudwatch_log_group_kms_key.aws_kms_key.direct_key",
            "module.eks_cluster.module.cloudwatch_log_group_kms_key.aws_kms_key.service_key",
            "module.eks_cluster.module.cloudwatch_log_group_kms_key.data.aws_caller_identity.current",
            "module.eks_cluster.module.cloudwatch_log_group_kms_key.data.aws_iam_policy_document.kms_key_policy_direct",
            "module.eks_cluster.module.cloudwatch_log_group_kms_key.data.aws_iam_policy_document.kms_key_policy_via_service",
            "module.eks_cluster.module.envelope_encryption_kms_key.aws_kms_key.direct_key",
            "module.eks_cluster.module.envelope_encryption_kms_key.aws_kms_key.service_key",
            "module.eks_cluster.module.envelope_encryption_kms_key.data.aws_caller_identity.current",
            "module.eks_cluster.module.envelope_encryption_kms_key.data.aws_iam_policy_document.kms_key_policy_direct",
            "module.eks_cluster.module.envelope_encryption_kms_key.data.aws_iam_policy_document.kms_key_policy_via_service",
            "module.eks_cluster.random_string.postfix"
          ]
        }
      ]
    }
  ]
}